# Tw_stock_hot

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: docker-publish.yml
docker/: Dockerfile  build.sh
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: hot.js
frontend/src/components/: HotDashboard.css  HotDashboard.jsx  IndustryRank.css  IndustryRank.jsx  IndustryRatioRank.css  IndustryRatioRank.jsx  IndustryStats.css  IndustryStats.jsx  IndustryStocks.css  IndustryStocks.jsx  LimitStockTable.css  LimitStockTable.jsx  LimitStocks.css  LimitStocks.jsx  RankTable.css  RankTable.jsx
src/tw_stock_hot/: __init__.py  main.py
src/tw_stock_hot/web/: app.py
src/tw_stock_hot/web/routers/: hot.py
tests/: test_hot_api.py
